src-ffigen/dart/02-primitives/primitives.h

long sum(long const a0, long const a1);
long *multiply(long const a0, long const a1);
void free_pointer(long *const a0);
long subtract(int *const a0, long const a1);